extender VilkårVurderingSteg og rydder opp
Signed-off-by: Qadeer Khan <qadeer.ahmad.khan@nav.no>